--- a/src/styles/templates/_project.scss
+++ b/src/styles/templates/_project.scss
@@ -1,5 +1,21 @@
 .template-project{
-    
+  main{
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .hero{}
+  .header{
+    padding-top: $margeS;
+    padding-bottom: $margeS;
+    border-bottom: $border;
+  }
+  .content{
+    padding-top: $margeS;
+    padding-bottom: $margeS;
+    .credits{
+      li{margin-bottom: 1em;}
+    }
+  }
 }
 
 
