--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -35,6 +35,9 @@ $fontSLh: 1.2em;
 $fontM: 24px;
 $fontMLh: 1.2em;
 
+$fontL: 48px;
+$fontMLh: 1.2em;
+
 $borderWidth: 1px;
 $border: $borderWidth solid;
 
@@ -46,6 +49,6 @@ $xs: 500px;
 
 $logoRatio: 1185.68/78.45;
 $headerHeight: calc( (100vw - #{$margeM}) / #{$logoRatio} + #{$margeM} + #{$margeS} + 42px);
-$headerHeightMobile: 50px;
+$headerHeightMobile: calc( (100vw - #{$margeS}) / #{$logoRatio} + #{$margeS} + #{$margeS} + 26px);;
 
 @debug "logoRatio: #{$logoRatio}";
