--- a/src/styles/components/_card-home.scss
+++ b/src/styles/components/_card-home.scss
@@ -31,5 +31,14 @@
 //60px home
 
 @media all and (max-width:$s){
-
+    .card-home{
+        padding: $margeXS 0;
+        .gatsby-image-wrapper{
+            margin-bottom: $margeXS;
+        }
+        .card-header{
+            padding-left: 0;
+            .top{border: none; padding: 0;}
+        }
+    }
 }
