--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -51,4 +51,4 @@ $logoRatio: 1185.68/78.45;
 $headerHeight: calc( (100vw - #{$margeM}) / #{$logoRatio} + #{$margeM} + #{$margeS} + 42px);
 $headerHeightMobile: calc( (100vw - #{$margeS}) / #{$logoRatio} + #{$margeS} + #{$margeXS} + 26px);;
 
-@debug "logoRatio: #{$logoRatio}";
+// @debug "logoRatio: #{$logoRatio}";
