--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -89,7 +89,7 @@ a {
 		border-radius: 500px;
   	-webkit-appearance: none;
 		border: $border;
-		padding: 0.3em 1em;
+		padding: 0.2em 1em 0.3em 1em;
 		&:hover {
 			color: $white;
 			background: $black;
