--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -2,27 +2,35 @@ footer{
     z-index: 0;
     position: fixed;
     bottom: 0;
-    width: 100%; height: 80vh;
+    width: 100%; min-height: 80vh;
     padding:  $margeL $margeS $margeS;
     background: $black;
     color: $white;
     a{
-        color:$white
+        color:$white;
+        &:hover{text-decoration: underline;}
     }
     h3{
         margin-bottom: 1em;
     }
-    .infos{margin-bottom: $margeM;}
+    .infos{
+        margin-bottom: $margeM;
+        text-align: justify;
+        hyphens: auto;
+    }
     .contacts,
     .colophon{
         margin-bottom: $margeL;
+    }
+    .contacts{
+        .item{margin-bottom: $margeS;}
     }
     .copy{
         position: absolute;
         bottom: $margeM; width: 100%;
     }
     svg{
-        position: absolute;
+        // position: absolute;
         width: 100%; height: auto;;
         bottom: 0;
         path{
