--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -2,10 +2,17 @@ footer{
     z-index: 0;
     position: fixed;
     bottom: 0;
-    width: 100%; min-height: 80vh;
+    width: 100%; 
+    //min-height: 80vh;
+    //height: 80vh;
     padding:  $margeL $margeS $margeS;
     background: $black;
     color: $white;
+    .inner{
+        // @include flexbox;
+        // @include flex-direction(column);
+        // @include justify-content(space-between);
+    }
     a{
         color:$white;
         &:hover{text-decoration: underline;}
@@ -42,7 +49,7 @@ footer{
 @media all and (max-width:$s){
     footer{
         padding:  $margeM $margeXS $margeXS;
-        height: 100vh;
+        // height: 100vh;
         // .row{height: 100%;}
         .infos,
         .contacts,
@@ -51,5 +58,6 @@ footer{
             p{font-size: $fontS;}
         }
         .copy{position: initial;}
+        svg{margin-top: $margeM;}
     }
 }
