--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -40,6 +40,7 @@ footer{
         // position: absolute;
         width: 100%; height: auto;;
         bottom: 0;
+        vertical-align: top;
         path{
             fill: $white;
         }
