--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -22,8 +22,8 @@ footer{
     }
     .infos{
         margin-bottom: $margeM;
-        text-align: justify;
-        hyphens: auto;
+        // text-align: justify;
+// hyphens: auto;
     }
     .contacts,
     .colophon{
