--- a/src/styles/templates/_project.scss
+++ b/src/styles/templates/_project.scss
@@ -1,59 +1,79 @@
-.template-project{
-  main{
+.template-project {
+  main {
     padding-left: 0;
     padding-right: 0;
   }
-  .hero{}
-  .header{
+
+  .hero {}
+
+  .header {
     padding-top: $margeS;
-    
-    .item{
+
+    .item {
       border-bottom: $border;
       padding-bottom: $margeS;
     }
   }
-  .content{
+
+  .content {
     padding-top: $margeS;
     padding-bottom: $margeS;
-    margin-bottom: $margeM;
-    .credits{
-      li{margin-bottom: 1em;}
-      a{text-decoration: underline;}
+    margin-bottom: $margeL;
+
+    .credits {
+      li {
+        margin-bottom: 1em;
+      }
+
+      a {
+        text-decoration: underline;
+      }
     }
   }
-  .related{
-    
-    .section-title{
-      border-top: $border;
+
+  .related {
+
+    .section-title {
+      // border-top: $border;
       padding: $margeS 0;
     }
   }
 }
 
 
-@media all and (max-width:$s){
-  .template-project{
-    .header{
+@media all and (max-width:$s) {
+  .template-project {
+    .header {
       padding-top: 0;
-      
-      .item{
+
+      .item {
         padding-top: $margeXS;
         padding-bottom: $margeXS;
       }
+
       h1,
-      .metas{font-size: $fontS;}
-    }
-    .content{
-      padding-top: $margeXS;
-      padding-bottom: $margeXS;
-      
-      .credits{
-        li{margin-bottom: 1em;}
-        a{text-decoration: underline;}
+      .metas {
+        font-size: $fontS;
       }
     }
-    .related{
-      .section-title{
+
+    .content {
+      padding-top: $margeXS;
+      padding-bottom: $margeXS;
+
+      .credits {
+        li {
+          margin-bottom: 1em;
+        }
+
+        a {
+          text-decoration: underline;
+        }
+      }
+    }
+
+    .related {
+      .section-title {
         font-size: $fontS;
         padding-top: $margeXS;
         padding-bottom: $margeXS;
